gitops/apps/frontend-react/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-react
  namespace: frontend
  labels:
    app: frontend-react
spec:
  type: ClusterIP
  selector:
    app: frontend-react
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
